fix: fix bug handler
