# docs/swagger.json
@@ -486,10 +486,7 @@
                     "404": {
                         "description": "record not found",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "type": "message"
                         }
                     }
                 }
@@ -557,7 +554,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github_com_mthpedrosa_financial-exchange-challenge_internal_instrument_domain_dto.InstrumentDTO"
+                            "$ref": "#/definitions/github_com_mthpedrosa_financial-exchange-challenge_internal_instrument_domain_dto.CreateInstrumentResponse"
                         }
                     },
                     "400": {
@@ -782,6 +779,50 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/orders/instrument/{instrumentID}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "Busca as orders por um Intrument",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Instrument ID",
+                        "name": "instrument_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Asset",
+                        "name": "asset",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_mthpedrosa_financial-exchange-challenge_internal_order_domain_dto.OrderDTO"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "instrumentID required",
+                        "schema": {
+                            "type": "message"
                         }
                     }
                 }
@@ -1038,6 +1079,14 @@
                     "type": "string"
                 },
                 "quote_asset": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_mthpedrosa_financial-exchange-challenge_internal_instrument_domain_dto.CreateInstrumentResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
                     "type": "string"
                 }
             }
